charts/argocd/resources/httproute-webhooks.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: argocd-applicationset-controller
  namespace: argocd
spec:
  hostnames:
    - argocd-webhooks.g4v.dev
  parentRefs:
    - name: http-gateway
      namespace: envoy-gateway
      sectionName: https
  rules:
    - backendRefs:
        - group: ""
          kind: Service
          name: argocd-applicationset-controller
          port: 7000
      matches:
        - path:
            type: PathPrefix
            value: /api/webhook
